--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.2"
   - "3.3"
   - "3.4"
   - "3.5"
   - "3.5-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
-# command to install dependencies
-# install: "pip install -r requirements.txt"
-# command to run tests
+install:
+  - python -c "import sys; sys.exit(int(sys.version_info < (3, 2)));" || pip install future
+  - pip install coveralls
 script:
-    - python -m unittest discover tests
+  - python -m unittest discover tests
+after_success:
+  - coveralls
