--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.3"
   - "3.4"
@@ -11,6 +10,6 @@ install:
   - python -c "import sys; sys.exit(int(sys.version_info < (3, 2)));" || pip install future
   - pip install coveralls
 script:
-  - python -m unittest discover tests
+  - coverage run -m unittest discover tests
 after_success:
   - coveralls
