--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
+dist: xenial
 language: python
 python:
   - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-  - "nightly" # currently points to 3.6-dev
+  - "3.6"
+  - "3.7"
+  - "nightly"
 install:
   - python -c "import sys; sys.exit(int(sys.version_info < (3, 2)));" || pip install future
   - pip install coveralls
